--- a/Milpay2.html
+++ b/Milpay2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<head>
+<head><link rel="stylesheet" href="style.css">
   <title>The great</title>
 </head>
 <h1>Active cartoon network shows</h1>
