--- a/Milpay2.html
+++ b/Milpay2.html
@@ -14,6 +14,10 @@
       </ul>
       <a href ="https://www.epicgames.com/fortnite/en-US/buy-now/battle-royale">Play fortnite now</a>
       <a href ="https://www.cartoonnetwork.com/">Or click here to watch the shows</a>
+      <a href ="https://www.google.com/search?q=snake&rlz=1C1GCEA_enUS800US800&oq=snake&aqs=chrome..69i57j0l5.3071j0j7&sourceid=chrome&ie=UTF-8">Play snake with and tell me your high score</a>
+      <form>
+        Score:<br>
+        <input type ="text"name ="score" placeholder="Score"></br>
       <img src="https://cdn2.vectorstock.com/i/1000x1000/02/56/thumbs-up-star-vector-560256.jpg"</img src>
       <form>
         First name:<br>
