--- a/Milpay2.html
+++ b/Milpay2.html
@@ -18,7 +18,7 @@
       <form>
         Score:<br>
         <input type ="text"name ="score" placeholder="Score"></br>
-      <img src="https://cdn2.vectorstock.com/i/1000x1000/02/56/thumbs-up-star-vector-560256.jpg"</img src>
+      <img src="https://cdn2.vectorstock.com/i/1000x1000/02/56/thumbs-up-star-vector-560256.jpg">
       <form>
         First name:<br>
         <input type ="text"name ="firstname" placeholder="First Name"></br>
