--- a/Milpay2.html
+++ b/Milpay2.html
@@ -28,5 +28,10 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/UWNoSGjt_dU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <img src="https://i.redd.it/b7h6s6kyxv601.jpg"> </img src>
   <img src="https://media1.tenor.com/images/c90177d449135d29a3a43ef77760853a/tenor.gif?itemid=4514232"> </img src>
+<form>
+  <input type="radio" name="gender" value="male"> Male<br>
+  <input type="radio" name="gender" value="female"> Female<br>
+  <input type="radio" name="gender" value="other"> Other
+</form>
 </body>
 </html>
