--- a/Milpay2.html
+++ b/Milpay2.html
@@ -37,7 +37,7 @@
   <option value="Good">Good</option>
   <option value="Eh">Eh</option>
   <option value="Bad">Bad</option>
-    <option value="Awful">AAwful</option>
+  <option value="Awful">Awful</option>
 </select>
 </form>
 </body>
