--- a/Milpay2.html
+++ b/Milpay2.html
@@ -32,12 +32,12 @@
   <input type="radio" name="gender" value="male"> Male<br>
   <input type="radio" name="gender" value="female"> Female<br>
   <input type="radio" name="gender" value="other"> Other
-  <select name="cars">
-  <option value="Great">Great</option>
-  <option value="Good">Good</option>
-  <option value="Eh">Eh</option>
-  <option value="Bad">Bad</option>
-  <option value="Awful">Awful</option>
+   <select name="Your mood">
+     <option value="Great">Great</option>
+     <option value="Good">Good</option>
+     <option value="Eh">Eh</option>
+     <option value="Bad">Bad</option>
+     <option value="Awful">Awful</option>
 </select>
 </form>
 </body>
