--- a/Milpay2.html
+++ b/Milpay2.html
@@ -4,8 +4,8 @@
 </head>
 <h1>Active cartoon network shows</h1>
 <body>
-  <p><link rel="stylesheet" href="style.css">My favorite active show on cartoon network is The Amazing World of Gumball </p>
-  <p2>By far the worst active show on cartoon network is Summer Camp Island. This show is fifteen minutes of straight singing it's incredibly pointless and belongs on nick or disney JR. Cartoon network made a big...<br> oooff </p2>
+  <p><link rel="stylesheets" href="style.css">My favorite active show on cartoon network is The Amazing World of Gumball </p>
+  <p>By far the worst active show on cartoon network is Summer Camp Island. This show is fifteen minutes of straight singing it's incredibly pointless and belongs on nick or disney JR. Cartoon network made a big...<br> oooff </p>
   <h2> List of shows</h2>
     <ol>
       <li>The Amazing World Of Gumball</li>
