--- a/Milpay2.html
+++ b/Milpay2.html
@@ -43,7 +43,7 @@
       <a href="https://www.google.com/search?q=snake&rlz=1C1GCEA_enUS800US800&oq=snake&aqs=chrome.0.69i59j0l5.2191j0j4&sourceid=chrome&ie=UTF-8">Play snake with and tell me your high score</a>
       <br /><br />
       Score:<br>
-      <input class="scoreInput" type ="text"name ="score" placeholder="Score"><input type="submit" value="submit" onclick="submitScore();" /></br>
+      <input id="scoreInput" type ="text"name ="score" placeholder="Score"><input type="submit" value="submit" onclick="submitScore();" /></br>
       <br />
       <ol id="scoreList">
         <lh>Scores (type in a score above and submit to see them below)</lh>
