--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <br /> <!-- LINE BREAK -->
     <div class="navbar">
       <ul class="navlinks">
-        <li><a href="#link1">link 1</a></li>
-        <li><a href="#link2">link 2</a></li>
-        <li><a href="#link3">link 3</a></li>
+        <li><a href="/Milpay2">My website</a></li>
+        <li><a href="/Hot Cheetos/index.html">particle js</a></li>
       </ul> <!-- END NAVLINKS UL -->
     </div> <!-- END NAVBAR DIV -->
     <br /> <!-- LINE BREAK -->
