--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar">
       <ul class="navlinks">
         <li><a href="/Milpay2">My website</a></li>
-        <li><a href="/Hot Cheetos/index.html">particle js</a></li>
+        <li><a href="/Hot cheetos/index.html">particle js</a></li>
       </ul> <!-- END NAVLINKS UL -->
     </div> <!-- END NAVBAR DIV -->
     <br /> <!-- LINE BREAK -->
