--- a/Milpay2.html
+++ b/Milpay2.html
@@ -31,7 +31,7 @@
 <h1>Active cartoon network shows</h1>
 <body>
   <p><link rel="stylesheets" href="style.css">My favorite active show on cartoon network is The Amazing World of Gumball </p>
-  <p>By far the worst active show on cartoon network is Summer Camp Island. This show is fifteen minutes of straight singing it's incredibly pointless and belongs on nick or disney JR. Cartoon network made a big...<br> oooff </p>
+  <p>By far the worst active show on cartoon network is Total Dramarama. This show is just shitting on my childhood like teen titans go and it's big sad ngl.<br> oooff </p>
   <h2> List of shows</h2>
     <ol>
       <li>The Amazing World Of Gumball</li>
@@ -48,9 +48,8 @@
       <ol id="scoreList">
         <lh>Scores (type in a score above and submit to see them below)</lh>
       </ol>
-      <br /><br />
-      <img src="https://cdn2.vectorstock.com/i/1000x1000/02/56/thumbs-up-star-vector-560256.jpg">
-      <form>
+      <br /><br /
+        <form>
         First name:<br>
         <input type ="text"name ="firstname" placeholder="First Name"></br>
         Last name:<br>
