--- a/Milpay2.html
+++ b/Milpay2.html
@@ -49,6 +49,7 @@
         <lh>Scores (type in a score above and submit to see them below)</lh>
       </ol>
       <br /><br /
+      <img src="https://images.app.goo.gl/6gkMTkwXgzE2DFf58"> </img src>
         <form>
         First name:<br>
         <input type ="text"name ="firstname" placeholder="First Name"></br>
